# shancrys

./: .dockerignore  .env.example  .env.reports  .gitignore  .markdownlint.json  API-RODANDO.md  COMANDOS-DEPLOY.ps1  DEPLOY-MANUAL-STEPS.md  DEPLOY-QUICK.md  DEPLOY-RAPIDO-MONGODB.md  DEPLOY-STATUS.md  DEPLOY.md  FIX-AUTH-ERROR.md  GITHUB-SECRETS.md  MONGODB-MIGRATION.md  MONGODB-WORKFLOW-CONFIG.md  QUICKSTART.md  README-QUICK.md  README.md  ROADMAP-PERFORMANCE.md  SETUP-LOCAL.md  START-HERE.md  STATUS.md  SUMMARY.md  Shancrys.sln  TESTE-RAPIDO.md  azure.yaml  azure_credentials.json  deploy-azure.ps1  shancrys_report.py  start-shancrys.ps1  stop-shancrys.ps1
.devcontainer/: Dockerfile  devcontainer.json
Reports/: README.md
devtools/: index.html  package-lock.json  package.json  staticwebapp.config.json  vite.config.ts
docs/: HEALTH-CHECK.md  README.md  adr-001-stack.md  adr-002-event-bus.md  adr-003-offline-sync.md  adr-004-versionamento-modelo.md  adr-005-simulacao-4d.md  adr-006-seguranca-rbac.md  adr-007-observabilidade.md  architecture.md  marketing-action-checklist.md  marketing-strategy.md  marketing-summary.md
engine/: CMakeLists.txt  README.md
engine/include/shancrys/: parser.hpp
engine/src/: parser.cpp
engine/src/cli/: main.cpp
frontend/: .env.example  README.md  TECHNICAL_FOUNDATION.md  package-lock.json  package.json  staticwebapp.config.json  tsconfig.app.json  vite.config.ts
infra/: container-apps.bicep  main.bicep  main.json  main.parameters.json
infrastructure/: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml
mobile-temp/: package-lock.json  package.json
(+195 files in other folders)
